fix: background color

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
         padding: 0px;
         /* Allows content to fill the viewport and go beyond the bottom */
         min-height: 100%;
+
+        /* Prevents the white flash when transitioning between pages */
+        background-color: #F5F1F0;
       }
       #root {
         flex-shrink: 0;
